--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "element-plus": "^2.9.1",
     "nuxt": "^3.15.0",
+    "primeicons": "^7.0.0",
     "vue": "latest",
     "vue-router": "latest"
   },
