--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.9.1",
     "nuxt": "^3.15.0",
     "primeicons": "^7.0.0",
+    "tailwindcss-animation-delay": "^2.0.1",
     "vue": "latest",
     "vue-router": "latest"
   },
