--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@xpd/tailwind-3dtransforms": "^1.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
