--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@designbycode/tailwindcss-text-stroke": "^1.3.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@element-plus/nuxt": "^1.1.1",
     "@nuxtjs/color-mode": "^3.5.2",
