--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@element-plus/nuxt": "^1.1.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "apexcharts": "^4.3.0",
     "element-plus": "^2.9.1",
     "nuxt": "^3.15.0",
     "primeicons": "^7.0.0",
     "tailwindcss-animation-delay": "^2.0.1",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@xpd/tailwind-3dtransforms": "^1.0.3",
