--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "apexcharts": "^4.3.0",
+    "axios": "^1.7.9",
     "element-plus": "^2.9.1",
     "nuxt": "^3.15.0",
     "primeicons": "^7.0.0",
