--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@designbycode/tailwindcss-text-stroke": "^1.3.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@element-plus/nuxt": "^1.1.1",
+    "@nuxt/icon": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "apexcharts": "^4.3.0",
