--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "tailwindcss-animation-delay": "^2.0.1",
     "vue": "latest",
     "vue-router": "latest",
-    "vue3-apexcharts": "^1.8.0"
-  },
-  "devDependencies": {
+    "vue3-apexcharts": "^1.8.0",
     "@xpd/tailwind-3dtransforms": "^1.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
