--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "@nuxt/icon": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@xpd/tailwind-3dtransforms": "^1.0.3",
     "apexcharts": "^4.3.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "element-plus": "^2.9.1",
     "nuxt": "^3.15.0",
+    "postcss": "^8.4.49",
     "primeicons": "^7.0.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animation-delay": "^2.0.1",
     "vue": "latest",
     "vue-router": "latest",
-    "vue3-apexcharts": "^1.8.0",
-    "@xpd/tailwind-3dtransforms": "^1.0.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "vue3-apexcharts": "^1.8.0"
   }
 }
