shadcn | Initialized with Neutral + Blue

--- a/package.json
+++ b/package.json
@@ -22,12 +22,19 @@
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "element-plus": "^2.9.1",
+    "lucide-vue-next": "^0.513.0",
     "nuxt": "^3.15.0",
     "primeicons": "^7.0.0",
+    "reka-ui": "^2.3.1",
+    "shadcn-nuxt": "^2.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "tailwindcss-animation-delay": "^2.0.1",
+    "tw-animate-css": "^1.3.4",
     "vue": "latest",
     "vue-router": "latest",
     "vue3-apexcharts": "^1.8.0"
