--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^13.3.0",
     "@xpd/tailwind-3dtransforms": "^1.0.3",
     "apexcharts": "^4.3.0",
