--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/device": "^3.2.4",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/vue-table": "^8.21.3",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.3.0",
     "@xpd/tailwind-3dtransforms": "^1.0.3",
     "apexcharts": "^4.3.0",
@@ -37,9 +38,11 @@
     "tailwindcss": "^4.1.8",
     "tailwindcss-animation-delay": "^2.0.1",
     "tw-animate-css": "^1.3.4",
+    "vee-validate": "^4.15.1",
     "vue": "latest",
     "vue-router": "latest",
     "vue-sonner": "^2.0.0",
-    "vue3-apexcharts": "^1.8.0"
+    "vue3-apexcharts": "^1.8.0",
+    "zod": "^3.25.57"
   }
 }
