--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "element-plus": "^2.9.1",
     "lucide-vue-next": "^0.513.0",
     "nuxt": "^3.15.0",
+    "nuxt-charts": "^0.1.9",
     "primeicons": "^7.0.0",
     "reka-ui": "^2.3.1",
     "shadcn-nuxt": "^2.2.0",
