--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   },
   "dependencies": {
     "@designbycode/tailwindcss-text-stroke": "^1.3.0",
-    "@element-plus/icons-vue": "^2.3.1",
-    "@element-plus/nuxt": "^1.1.1",
     "@nuxt/icon": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
@@ -27,7 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "element-plus": "^2.9.1",
+    "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.513.0",
     "nuxt": "^3.15.0",
     "nuxt-charts": "^0.1.9",
