--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@artmizu/yandex-metrika-nuxt": "^1.1.0",
     "@designbycode/tailwindcss-text-stroke": "^1.3.0",
     "@nuxt/icon": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
