--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@nuxtjs/device": "^3.2.4",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/vue-table": "^8.21.3",
+    "@unovis/ts": "^1.5.2",
+    "@unovis/vue": "^1.5.2",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.4.0",
     "@xpd/tailwind-3dtransforms": "^1.0.3",
