nuxt4 migration | tsconfig.json fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "include": [
+    ".nuxt/**/*.ts",
+    "nuxt.config.ts",
+    "app/types/**/*.d.ts",
+    "**/*.ts",
+    "**/*.vue"
+  ]
 }
