--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/icon": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/device": "^3.2.4",
+    "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/vue-table": "^8.21.3",
     "@unovis/ts": "^1.5.2",
@@ -31,6 +32,7 @@
     "embla-carousel-vue": "^8.6.0",
     "lucide-vue-next": "^0.554.0",
     "nuxt": "^4.2.2",
+    "pinia": "^3.0.4",
     "primeicons": "^7.0.0",
     "reka-ui": "^2.6.1",
     "shadcn-nuxt": "^2.2.0",
